--- a/src/views/components/label/label.css
+++ b/src/views/components/label/label.css
@@ -1,11 +1,11 @@
 label {
   display: block;
   position: relative;
-  top: 15px;
-  margin-left: 30px;
+  top: 30px;
+  left: 60px;
   font-size: 16px;
   font-weight: 400;
-  color: rgba(0, 0, 0, 0.59);
+  color: rgba(0, 0, 0, 0.79);
   z-index: 2;
 }
 
