--- a/src/views/components/label/label.scss
+++ b/src/views/components/label/label.scss
@@ -3,8 +3,8 @@
 label {
     display: block;
     position: relative;
-    top: 15px;
-    margin-left: 30px;
+    top: 30px;
+    left: 60px;
 
     // font-family: Inter;
     font-size: 16px;
